[package]
name = "pmnow"
version = "0.1.0"
edition = "2024"

[dependencies]
ring = "0.17.14"
tokio-serial = "5.4.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time"] }
bincode = "2.0.1"
anyhow = "1.0.98"
rumqttc = "0.24.0"
base64 = "0.22.1"
hex = "0.4.3"
reqwest = { version = "0.12" }
